--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,11 +6,14 @@ button {
     width: 400px;
 }
 #resultsContainer{
-    height: 50px;
+    height: 80px;
     width: 400px;
     font-size: xx-large;
     background-color: black;
     color: white;
+    display: grid;
+    grid-template-rows: repeat(1, 1fr);
+    grid-template-columns: repeat(25, 16px);
 }
 .wrapperCalc{
     display: grid;
